* Re-implemented displaying hotkeys on action bar slots.
* Support for 'item:quantity' syntax for Event properties: 'requires_item', 'requires_not_item', 'remove_item', and 'reward_item'.
* Added 'show_randomize' property to new game menu configuration.
* Added 'disable_equip_slots' property for passive powers.

Engine fixes:

* Fix memory leak of tab control in stash menu (MiroslavR)
* Fixed stat bars not having any fill when the value they were representing was non-zero. Now they will always show at least 1 pixel of the bar's fill graphics.
* Fixed a bug where the game window could be resized below the minimum size after exiting fullscreen mode.
* Removed the default resolution scaling when virtual_heights is undefined.
* Improved performance when checking map event hotspots.
* Fix Windows-style paths with backslashes not working on non-Windows systems.
* Prevent allies counting as attack targets when using mouse movement.
* Fix needing to press the 'Cancel' key twice to exit the vendor menu.
* Fix unintended key presses being registered when quitting the game via an OS keyboard shortcut.
* Fix divide-by-zero crash when using the dev HUD with a game that uses orthogonal rendering.
* Fixed a memory leak in Loot copy constructor.
* Fixed 'resist_percent' property of engine/combat.txt not working when targets had 100% resistance.
* Support attack_speed effects with a magnitude less than 100%.
* Fixed bug where dead entities could steal HP/MP.
* Fix broken parsing of engine/default_keybindings.txt.
* Fix Effect animations not being synced properly in some cases.

Game updates:

* New graphics for HP and MP status bars

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* German (de) update (Wuzzy2)
* Basque (eu) by aitzkora
* Scottish Gaelic (gd) update (GunChleoc)
* Hungarian (hu) update (litoll)
* Norwegian (nb) update (Elias Nykrem)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)