@@ -18,6 +18,7 @@ Engine features:
 * Support for 'item:quantity' syntax for Event properties: 'requires_item', 'requires_not_item', 'remove_item', and 'reward_item'.
 * Added 'show_randomize' property to new game menu configuration.
 * Added 'disable_equip_slots' property for passive powers.
+* 'Block' powers can now use post_power to trigger a power when taking damage.
 
 Engine fixes:
 
